WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137066
Fix minimal build warnings
https://bugs.webkit.org/show_bug.cgi?id=137066
Summary
Fix minimal build warnings
Éva Balázsfalvi
Reported
2014-09-24 07:10:18 PDT
/webkit/WebKit/Source/WebCore/css/CSSParser.cpp:640:24: warning: unused parameter 'parserContext' [-Wunused-parameter] /webkit/WebKit/Source/WebCore/html/parser/HTMLPreloadScanner.cpp:96:10: warning: unused parameter 'document' [-Wunused-parameter] /webkit/WebKit/Source/WebCore/page/Page.cpp:731:6: warning: unused parameter 'inStableState' [-Wunused-parameter] /webkit/WebKit/Source/WebCore/platform/graphics/WidthIterator.cpp:71:11: warning: unused parameter 'normalizedSpacesStringCache' [-Wunused-parameter] /webkit/WebKit/Source/WebCore/rendering/svg/SVGInlineTextBox.cpp:389:6: warning: unused parameter 'textRun' [-Wunused-parameter] /webkit/WebKit/WebKitBuild/Release/DerivedSources/WebKit2/WebPageMessageReceiver.cpp:1057:6: warning: unused parameter 'connection' [-Wunused-parameter]
Attachments
Patch
(5.83 KB, patch)
2014-09-24 07:13 PDT
,
Éva Balázsfalvi
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.27 KB, patch)
2014-10-02 02:03 PDT
,
Éva Balázsfalvi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Éva Balázsfalvi
Comment 1
2014-09-24 07:13:05 PDT
Created
attachment 238598
[details]
Patch
Daniel Bates
Comment 2
2014-10-01 10:43:16 PDT
Comment on
attachment 238598
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=238598&action=review
The patch looks good with the exception of the change to Source/WebKit2/Scripts/webkit/messages.py, which isn't necessary following the patch for
bug #137107
, <
http://trac.webkit.org/changeset/173990
>.
> Source/WebKit2/Scripts/webkit/messages.py:620 > + if not receiver.has_attribute(LEGACY_RECEIVER_ATTRIBUTE) or sync_delayed_messages:
This change isn't necessary following <
http://trac.webkit.org/changeset/173990
> (
bug #137107
).
Éva Balázsfalvi
Comment 3
2014-10-02 02:03:35 PDT
Created
attachment 239094
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2014-10-02 02:47:29 PDT
Comment on
attachment 239094
[details]
Patch for landing Clearing flags on attachment: 239094 Committed
r174206
: <
http://trac.webkit.org/changeset/174206
>
WebKit Commit Bot
Comment 5
2014-10-02 02:47:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug