Fix minimal build warnings https://bugs.webkit.org/show_bug.cgi?id=137066

Reviewed by Daniel Bates.

No new tests, no behavior change.

* css/CSSParser.cpp:
(WebCore::isValidKeywordPropertyAndValue):
* html/parser/HTMLPreloadScanner.cpp:
(WebCore::TokenPreloadScanner::StartTagScanner::processAttributes):
* page/Page.cpp:
(WebCore::Page::setPageScaleFactor):
* platform/graphics/WidthIterator.cpp:
(WebCore::WidthIterator::glyphDataForCharacter):
* rendering/svg/SVGInlineTextBox.cpp:
(WebCore::SVGInlineTextBox::prepareGraphicsContextForTextPainting):


Canonical link: https://commits.webkit.org/155134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174206 268f45cc-cd09-0410-ab3c-d52691b4dbfc