Source/WebCore/css/CSSParser.cpp
@@ -1035,6 +1035,9 @@ static inline bool isValidKeywordPropertyAndValue(CSSPropertyID propertyId, int 
         ASSERT_NOT_REACHED();
         return false;
     }
+#if !ENABLE(CSS_COMPOSITING) && !ENABLE(CSS_REGIONS)
+    UNUSED_PARAM(parserContext);
+#endif
     return false;
 }
 
